--- a/Etiquette/MainWindow.xaml
+++ b/Etiquette/MainWindow.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <NavigationView x:Name="NavView"
+        <NavigationView x:Name="NavView" 
                         Grid.Row="0"
                         Loaded="NavView_Loaded"
                         ItemInvoked="NavView_ItemInvoked"
@@ -46,6 +46,8 @@
 
             <DropDownButton Grid.Column="0" VerticalAlignment="Center" Background="Transparent" BorderThickness="0">
                 <StackPanel Orientation="Horizontal" Spacing="8">
+                    <Ellipse x:Name="PrinterStatusDot" Width="10" Height="10" Fill="Red" VerticalAlignment="Center" />
+
                     <FontIcon Glyph="&#xE749;" FontSize="14" />
                     <TextBlock x:Name="PrinterStatusText" Text="Imprimante : Non définie" FontSize="12" VerticalAlignment="Center" />
                 </StackPanel>
@@ -57,6 +59,8 @@
             <StackPanel Grid.Column="2" Orientation="Horizontal" Spacing="16" VerticalAlignment="Center">
 
                 <StackPanel Orientation="Horizontal" Spacing="6" ToolTipService.ToolTip="Statut de la connexion Base de Données">
+                    <Ellipse x:Name="DbStatusDot" Width="10" Height="10" Fill="Green" VerticalAlignment="Center" />
+
                     <FontIcon Glyph="&#xE1D3;" FontSize="12" />
                     <TextBlock x:Name="DbStatusText" Text="BDD : ..." FontSize="12" Opacity="0.8" VerticalAlignment="Center" />
                 </StackPanel>
