--- a/Etiquette/Views/AboutPage.xaml
+++ b/Etiquette/Views/AboutPage.xaml
@@ -1,8 +1,46 @@
 <Page
     x:Class="Etiquette.Views.AboutPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
     <Grid>
-        <TextBlock Text="À propos de l'application" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource TitleTextBlockStyle}"/>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="25" MaxWidth="600">
+
+            <StackPanel Spacing="10">
+                <Image Source="/Assets/StoreLogo.scale-200.png" Width="100" Height="100" HorizontalAlignment="Center"/>
+                <TextBlock Text="Etiquette" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Center"/>
+                <TextBlock Text="Gestion d'impression d'étiquettes" Style="{StaticResource BodyTextBlockStyle}" HorizontalAlignment="Center" Foreground="{ThemeResource SystemControlPageTextBaseMediumBrush}"/>
+            </StackPanel>
+
+            <MenuFlyoutSeparator MaxWidth="200"/>
+
+            <StackPanel Spacing="5">
+                <TextBlock Text="Développé par" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="16" HorizontalAlignment="Center"/>
+                <TextBlock Text="DEHER Rémi" Style="{StaticResource BodyStrongTextBlockStyle}" FontSize="18" HorizontalAlignment="Center" Foreground="{ThemeResource SystemAccentColor}"/>
+            </StackPanel>
+
+            <StackPanel Spacing="5">
+                <TextBlock Text="Code source &amp; Contributions" Style="{StaticResource BodyStrongTextBlockStyle}" HorizontalAlignment="Center"/>
+                <HyperlinkButton NavigateUri="https://github.com/remi-deher/etiquette" HorizontalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" Spacing="8">
+                        <FontIcon Glyph="&#xE90A;" FontFamily="Segoe MDL2 Assets"/>
+                        <TextBlock Text="Voir le projet sur GitHub"/>
+                    </StackPanel>
+                </HyperlinkButton>
+            </StackPanel>
+
+            <StackPanel Spacing="5" Margin="0,10,0,0">
+                <TextBlock Text="Licence" Style="{StaticResource BodyStrongTextBlockStyle}" HorizontalAlignment="Center"/>
+                <TextBlock Text="Ce projet est distribué sous la licence MIT." Style="{StaticResource CaptionTextBlockStyle}" HorizontalAlignment="Center" Foreground="Gray"/>
+                <TextBlock Text="© 2024 - Tous droits réservés" Style="{StaticResource CaptionTextBlockStyle}" HorizontalAlignment="Center" Foreground="Gray"/>
+            </StackPanel>
+
+        </StackPanel>
+
+        <TextBlock Text="Version 1.0.0" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="20" Foreground="{ThemeResource SystemControlPageTextBaseLowBrush}" FontSize="12"/>
     </Grid>
 </Page>
