--- a/Etiquette/Views/AboutPage.xaml
+++ b/Etiquette/Views/AboutPage.xaml
@@ -49,6 +49,10 @@
                 </HyperlinkButton>
             </StackPanel>
 
+            <HyperlinkButton Content="Voir l'historique des modifications (Changelog)" 
+                             Click="ChangelogButton_Click" 
+                             HorizontalAlignment="Center"/>
+
             <StackPanel Spacing="5" Margin="0,10,0,0">
                 <TextBlock Text="Licence" 
                            FontSize="14" FontWeight="Bold"
@@ -70,5 +74,6 @@
                    Margin="20" 
                    Foreground="Silver" 
                    FontSize="12"/>
+
     </Grid>
 </Page>
